# IveyNameplate

./: README.md  dummy_client.py
Dashboard/: package-lock.json  package.json  vite.config.ts
Dashboard/src/routes/: +page.svelte
common/: QuietMode.h  Reaction.h  Student.h
common/message/: Message.cpp  Message.h
nameplate/: CMakeLists.txt
nameplate/src/: Display.h  Message.cpp  Message.h  Nameplate.cpp  Nameplate.h  Network.h  PlatformFactory.h  RFID.h  Touch.h  VirtualKeyboard.cpp  VirtualKeyboard.h
nameplate/src/Platform/: PlatformConfig.cpp
nameplate/src/Platform/ASIO/: Client.cpp  Client.h  SerialRFID.cpp  SerialRFID.h  ServerConnection.cpp  ServerConnection.h
nameplate/src/Platform/Desktop/: EntryDesktop.cpp
nameplate/src/Platform/EccelRFID/: EccelRFID.cpp  EccelRFID.h
nameplate/src/Platform/SFML/: DisplaySFML.cpp  DisplaySFML.h  EntrySFML.cpp  SFMLDisplay.cpp
nameplate/src/Util/: Color.h  MiscUtil.cpp  MiscUtil.h  Serializable.h  Timer.cpp  Timer.h
rfid_arduino/: platformio.ini
rfid_arduino/src/: main.cpp
server_tcp/: .gitignore  CMakeLists.txt
server_tcp/src/: ClientConnection.cpp  ClientConnection.h  DatabaseConnection.cpp  DatabaseConnection.h  Main.cpp  Server.cpp  Server.h
testing/RFID_Test/: platformio.ini
testing/RFID_Test/src/: main.cpp
testing/RPI_RFID_dev/: EccelRFID.cpp  EccelRFID.h  rfid
